--- a/public/assests/site/css/style.css
+++ b/public/assests/site/css/style.css
@@ -1,29 +1,53 @@
-body {
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+body{
     width:  100%;
     height: 100%;
     margin: 0px 0px 0px 0px;
+    font-family: montserrat;
 }
 
-.menu-principal {
+nav{
     width: 100%;
     background-color: #2c2a2a;
-    height: 60px;
+    height: 80px;
 }
 
-main {
-    width: 800px;
-    margin: 0 auto;
-    position: relative;
-
-}
-.logo {
-    width: 70%;
+.logo{
+    width: 30px;
     float: left;
+    padding: 12px;
+    margin-left: 55px;
+}
+
+nav ul{
+    float: right;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+nav ul li a{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
 }
 
 .redes-sociais ul li {
     display: inline-block;
-    width: 5%;
+    width: 20px;
+    height: 40px;
     float: right;
     padding: 9px;
 }
@@ -31,4 +55,72 @@ main {
 .redes-sociais ul {
     margin-top: 0px;
     margin-bottom: 0px;   
+    margin-right: 0 5px;
 }
+
+a.active,a:hover{
+    background: #1b9bff;
+    transition: .5s ;
+}
+
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+
+@media (max-width: 952px){
+    .logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover,a.active{
+        background: none;
+        color: #0086e6;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+}
+
+section{
+    background: url() no-repeat;
+    background-size: cover;
+    height: calc(100vh - 80px);
+}
+
