--- a/public/assests/site/css/style.css
+++ b/public/assests/site/css/style.css
@@ -26,7 +26,11 @@
 .container-footer{
     width: 100%;
     float: left;
-    padding: 3% 4%;
+    padding: 2% 4% 0px 4%;
+}
+
+.block{
+    display: block;
 }
 
 /*======== BG COLORS =========*/
@@ -241,10 +245,11 @@ img{
 
 .inner h2{
     padding: 7px 0;
-    font-size: 20px;
-    color: #000000;
+    font-size: 15px;
+    color: #19aad9;
     font-weight: 700;
     text-align: center;
+    text-transform: uppercase;
 }
 
 .saiba-mais{
@@ -252,12 +257,12 @@ img{
     font-weight: 700;
     width: 100%;
     color: #fff;
-    background-color: #0d5ab5;
-    padding: 5%;
+    background-color: #337ab7;
+    padding: 10px;
     border-radius: 5px;
-    border: 1px solid rgb(122, 118, 118);
     cursor: pointer;
     margin-top: 2%;
+    text-transform: uppercase;
 }
 
 
@@ -328,7 +333,7 @@ img{
     margin-right: -54px;
 }
 
-/* NEWSLWTTER */
+/* NEWSLWTTER
 
 .newsletter h2{
     font-size: 1.5em;
@@ -360,18 +365,28 @@ img{
     border: 1px solid rgb(122, 118, 118);
     cursor: pointer;
     margin-top: 2%;
+} */
+
+/* Whatsapp */
+.chatbot{
+    bottom:15px;
+    right:15px;
+    position: fixed;
+    z-index: 999999;
+    bottom: 100px;
 }
 
 /* RODAPÉ */
-
-.rodape-footer{
-
-}
 
 .col-md-1 {
     width: 33.33333%;
     padding: 0 1%;
     float: left;
+    margin-bottom: 20px;
+}
+
+.img-rodape{
+    width: 30%;
 }
 
 .col-md-1 h3 {
@@ -396,9 +411,10 @@ img{
 }
 
 .col-md-2 {
-    width: 20%;
+    width: 16.66667%;
     display: inline-block;
-    margin-left: 98px;
+    margin-left: 8.33333%;
+    margin-bottom: 20px;
 }
 
 .col-md-2 ul li{
@@ -415,9 +431,11 @@ img{
 }
 
 .col-md-3{
-    width: 30%;
+    margin-left:  -0.66667%;
+    width: 25%;
     display: inline-block;
     margin-top: 0%;
+    margin-bottom: 20px;
 }
 
 .col-md-3 ul li{
@@ -427,6 +445,40 @@ img{
 .col-md-3 ul li a{
     color: #000000;
     font-weight: 400;
+}
+
+.col-md-3 ul li i{
+    color:  #828282        ;
+}
+
+.col-md-4{
+    width: 16.66667%;
+    left: 8.33333%;
+    float: right;
+}
+
+.col-md-4 ul a{
+    color: #828282;
+    font-size: 18px;
+}
+
+.col-md-4 ul i{
+    color: #828282;
+}
+
+.col-md-5{
+    text-align: center;
+    color: #000000;
+    border-top-width: 1px;
+    padding-top: 14px;
+    padding-bottom: 7px;
+}
+
+.col-md-5 p{
+    width: 100%;
+    color: #000000;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 
 /*======= MOBILE FIRST =======*/
@@ -495,7 +547,7 @@ img{
         margin-right: 0;
     }
 
-    .newsletter input{
+    /* .newsletter input{
         width: 70%;
         float: left;
         padding: 2%;
@@ -506,7 +558,7 @@ img{
         float: right;
         padding: 2%;
         margin-top: 0;
-    }
+    } */
     .fusion-text p{
         width: 80%;
         float: left;
@@ -545,14 +597,14 @@ img{
         margin-right: 0;
     }
 
-    .newsletter input{
+    /* .newsletter input{
         width: 60%;
         float: none;
     }
     .newsletter button{
         width: 20%;
         float: none;
-    }
+    } */
     .fusion-beneficios {
         width: 100%;
         float: left;
@@ -574,6 +626,44 @@ img{
         margin-top: -413px;
         margin-right: -39px;
     }
+    .col-md-1 p{
+        width: 100%;
+    }
+    .col-md-2 {
+        width: 16.66667%;
+        display: inline-block;
+        margin-left: 1.33333%;
+        margin-bottom: 20px;
+    }
+    .col-md-3 {
+        margin-left: -0.66667%;
+        width: 30%;
+        display: inline-block;
+        margin-top: 0%;
+        margin-bottom: 20px;
+    }
+    .container-footer {
+        width: 100%;
+        float: left;
+        padding: 1% 4% 0px 4%;
+    }
+    /* .col-md-5 {
+    margin-right: -54px;
+    background-color: #ffffff;
+    border-color: #000000;
+    color: #e6e6e6;
+    border-top-width: 1px;
+    padding-top: 14px;
+    padding-bottom: 7px;
+    margin-left: -54px;
+    padding-right: 20px; 
+    } */
+
+
+    .col-md-4 ul a {
+        color: #828282;
+        font-size: 16px;
+    }
 }
 
 
@@ -585,7 +675,7 @@ img{
         margin-top: -287px;
         margin-right: -39px;
     }
-} 
+}
 
 /* LARGE DEVICES - WIDE SCREENS */
 @media screen and (min-width: 1280px) {
@@ -632,4 +722,6 @@ img{
         margin-top: -282px;
         margin-right: -54px;
     }
+    
+    
 }
