--- a/public/assests/site/css/style.css
+++ b/public/assests/site/css/style.css
@@ -481,7 +481,7 @@ img{
     font-size: 15px;
 }
 
-/* Pagina Produto */
+/* Pagina Produto - Imagem e Formulario*/
 .name-produto-text{
     width: 100%;
     display: inline-flex;
@@ -614,6 +614,52 @@ img{
     color: #fff;
     font-weight: 600;
     letter-spacing: 0px;
+}
+
+/* Produto - Ficha e descrição */
+
+.row-descricao{
+    width: 100%;
+    height: 800px;
+    background: #f9f9f9;
+}
+
+.ficha{
+    width: 349px;
+    height: 482px;
+    border: 1px solid #d8d8d8; 
+    border-top: 2px solid #0d5ab5;   
+}
+
+.titulo-text{
+    height: 65px;
+}
+
+.text-ficha h2{
+    text-align: center;
+    font-weight: 500;
+    font-size: 30px;
+    font-family: "Montserrat" , arial, sans-serif;
+    color: #0e56c8;
+    padding: 15px;
+    border-bottom: 1px solid #d8d8d8;
+}
+.valor-text{
+    height: 70px;
+    border-bottom: 1px solid #d8d8d8;
+}
+
+.valor-text strong{
+    font-size: 18px;
+    font-weight: 700;
+    color: black;
+}
+
+.valor-text p{
+    text-align: center;
+    margin-top: 13px;
+    font-weight: 400;
+    color: gray;
 }
 
 /*======= MOBILE FIRST =======*/
