--- a/public/assests/site/css/style.css
+++ b/public/assests/site/css/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     font-size: 100%;
-    border: none; 
+    border: none;
     outline: none;
     font-weight: 300;
     box-sizing: border-box;
@@ -63,7 +63,7 @@ ul {
     list-style: none;
 }
 
-    
+
 img{
      max-width: 100%;
 }
@@ -181,7 +181,7 @@ img{
     color: #130400;
 }
 
-.btn-sobre{   
+.btn-sobre{
     color: #fff;
     margin-top: 2%;
 }
@@ -312,7 +312,7 @@ img{
 }
 
 /* .fusion-text{
-    left: 10%;   
+    left: 10%;
 } */
 .fusion-circulo{
     width: 100%;
@@ -324,7 +324,7 @@ img{
     display: inline-block;
     float: left;
     margin-left: 5px;
-    
+
 }
 
 .fusion-img {
@@ -498,7 +498,7 @@ img{
     height: 151px;
     text-transform: uppercase;
     font-weight: 500;
-    font-family: "Montserrat", Arial, sans-serif;   
+    font-family: "Montserrat", Arial, sans-serif;
 }
 
 .product{
@@ -636,7 +636,7 @@ img{
 .text-ficha{
     width: 35%;
     height: 482px;
-    border: 1px solid #d8d8d8; 
+    border: 1px solid #d8d8d8;
     border-top: 2px solid #0d5ab5;
 }
 
@@ -890,7 +890,7 @@ img{
     padding-top: 14px;
     padding-bottom: 7px;
     margin-left: -54px;
-    padding-right: 20px; 
+    padding-right: 20px;
     } */
 
 
@@ -956,12 +956,21 @@ img{
         margin-top: -282px;
         margin-right: -54px;
     }
-    
-    
+
+
 }
 
 /* Pagina PRODUTO */
 
 @media screen and (min-width: 320px) {
-    
+
+}
+
+
+.galleria{ height: 700px; }
+.galleria-thumbs{ display: none;}
+.galleria-fs{ display: none;}
+.galleria-theme-miniml.notouch .galleria-dots div:hover,
+.galleria-theme-miniml.touch .galleria-dots div:active {
+    color: #0e56c8;
 }
