--- a/public/assests/site/css/style.css
+++ b/public/assests/site/css/style.css
@@ -623,7 +623,7 @@ img{
     width: 100%;
     height: 800px;
     background: #f9f9f9;
-    display: inline-block;
+    display: inline-table;
     float: left;
     padding: 3% 8%;
 }
