--- a/public/assests/site/css/style.css
+++ b/public/assests/site/css/style.css
@@ -7,7 +7,6 @@
     outline: none;
     font-weight: 300;
     box-sizing: border-box;
-    font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
 /*======== CONTAINER =========*/
@@ -15,6 +14,7 @@
     width: 100%;
     float: left;
     padding: 1% 4%;
+    border-bottom: 3px solid #2691d0;
 }
 
 .container{
@@ -136,11 +136,11 @@ img{
     font-size: 2em;
     color: #130400;
     padding: 1.5% 0%;
+    font-family: 'Oswald', sans-serif;
 }
 
 .menu li a:hover{
     color: #0d5ab5;
-    border-bottom: 3px solid #0d5ab5;
 }
 
 /* BANNER */
@@ -713,6 +713,112 @@ img{
     padding: 10px;
 }
 
+
+/* Pagina institucional */
+.titprincipal{
+    text-align: center;
+    background: #ffffff;
+    color: #130400;
+    padding: 47px 4px;
+    font-size: 35px;
+    position: relative;
+    width: 100%;
+    height: 135px;
+    overflow: hidden;
+    font-family: "Panton Reg", Arial, Helvetica, sans-serif;
+}
+.folder{
+    width: 100%;
+    height: 600px;
+    position: relative;
+    border-top: 1px solid #c9c9c9;
+}
+
+.fol-fol{
+    position: relative;
+    width: 100%;
+    height: 600px;
+    background: #ffffff;
+}
+
+.contaain{
+    width: 50%;
+    height: 600px;
+    margin-left: 13%;
+    padding-top: 4%;
+}
+
+
+
+.titulo-fol{
+    position: relative;
+    font-family: 'Roboto Slab', serif;
+    font-size: 50px;
+}
+
+.texto-about{
+    position: relative;
+    margin-top: 3%;
+}
+
+.texto-about h2 p{
+    font-size: 18px;
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-family: Montserrat,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif;
+    letter-spacing: 0px;
+    font-style: normal;
+    color: #747474;
+}
+
+.iconar{
+    position: relative;
+}
+
+.colunnas{
+    width: 100%;
+    height: 600px;
+}
+
+.colls{
+    position: relative;
+}
+
+.img-princi{
+    position: absolute;
+}
+
+.princ-titulo h2{
+    position: relative;
+    padding: 3% 6% 0% 6%;
+    font-size: 40px;
+    font-family: 'Roboto Slab', serif;
+}
+
+.princ-titulo p{
+    position: relative;
+    padding: 1% 6% 3% 6%;
+    font-size: 20px;
+    font-family: Montserrat,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif;
+    color: #808080;
+}   
+
+.colls{
+    width: 100%;
+    padding: 3% 4%;
+    display: inline-flex;
+}
+
+.colls-1{
+    width: 33.333%;
+    height: 350px;
+    margin-right: 2%;
+    background-color: #fff;
+    box-shadow: 0 20px 20px 0 rgb(0 0 0 / 20%);
+    padding: 25px 30px 30px;
+    border-radius: 4px;
+}
+
 /*======= MOBILE FIRST =======*/
 /*SMALL DEVICES - SMARTPHONES*/
 
@@ -939,7 +1045,6 @@ img{
         padding: 15px;
     }
     .menu li a:hover{
-        border-bottom: 2px solid #0d5ab5;
         color: #0d5ab5;
     }
     .Espacamentoicon{
