--- a/public/assests/site/css/style.css
+++ b/public/assests/site/css/style.css
@@ -417,7 +417,13 @@ img{
     .container-footer {
         width: 1090px;
     }
-}      
+}
+
+@media (max-width: 1240px){
+    .container-product{
+        margin-left: 0 !important;
+    }
+}
 
 @media (min-width: 992px){
     .container-footer {
@@ -510,7 +516,7 @@ div {
         float: left;
         display: grid !important;
     }
-    
+
 }
 
 .col-md-4 , .col-sm-12{
@@ -658,14 +664,15 @@ a {
 
 .product{
     width: 100%;
+    display: flex;
     background: #f9f9f9;
     padding: 7% 0%;
 }
 
-.container-product{
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
+.container-product {
+    width: 40%;
+    margin-right: 155px;
+    margin-left: 155px;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -696,7 +703,7 @@ a {
         width: 100% !important;
         height: auto !important;
     }
-   
+
 }
 
 @media ( max-width: 1024px) {
@@ -704,7 +711,7 @@ a {
         margin-right: 20% !important;
     }
 }
- 
+
 @media ( max-width: 880px) {
     .menu{
         margin-right: 0 !important;
@@ -720,7 +727,7 @@ a {
 }
 
 .prod-imagem{
-    width: 55%;
+    max-width: 600px;
     height: 482px;
 }
 
@@ -734,6 +741,7 @@ a {
     float: left;
     background: #fff;
     width: 30%;
+    border-radius: 3%;
     height: 482px;
 }
 
@@ -805,6 +813,7 @@ a {
     height: 48px;
     border: 1px solid #ececec;
     border-radius: 5px;
+    margin: 10px 0 0px 17px;
     background: #0e56c8;
     color: #fff;
     font-weight: 600;
@@ -933,6 +942,7 @@ a {
     .contai {
         width: 1090px;
     }
+
 }
 
 @media (min-width: 992px){
@@ -1044,7 +1054,7 @@ a {
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
-    margin-inline-end: 0px; 
+    margin-inline-end: 0px;
     line-height: 27px;
     color: #707070;
     -webkit-tap-highlight-color: transparent;
@@ -1107,13 +1117,13 @@ section {
 input, input[type=text], input[type=password], input[type=email], input[type=number], textarea, select {
     height: 51px;
     line-height: 51px;
-    padding: 0 20px;
+    padding: 0px 20px;
     outline: none;
     font-size: 15px;
     color: gray;
-    margin: 0 0 16px;
+    margin: 0 0 10px 28px;
     max-width: 100%;
-    width: 100%;
+    width: 90%;
     box-sizing: border-box;
     display: block;
     background-color: #fcfcfc;
@@ -1121,6 +1131,13 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     border: 1px solid #e0e0e0;
     opacity: 1;
     border-radius: 3px;
+}
+
+.name-mask {
+    margin-left: 11px;
+    width: 40%;
+    height: 48px;
+    border: 1px solid #ececec;
 }
 
 #contact textarea, #contact input, .widget .search-blog-input input {
@@ -1149,7 +1166,7 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
 .chosen-container .chosen-results li.highlighted, .chosen-container-multi .chosen-choices li.search-choice, .select-options li:hover, a.button, a.button.border:hover, button.button, input[type=button], input[type=submit] {
     background-color: #084dc6;
     color: #fff;
-    
+
 }
 
 @media (min-width: 992px){
@@ -1177,7 +1194,7 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     .Espacamentoicon{
         margin-right: 0;
     }
-    
+
 }
 
 @media (max-width: 480px){
@@ -1368,7 +1385,7 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
 
 /* LARGE DEVICES - WIDE SCREENS */
 @media screen and (min-width: 1280px) {
-    
+
     .Espacamentoicon{
         margin-right: 280px;
     }
@@ -1421,7 +1438,7 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
       text-indent: -9999px;
       background: url('http://cdn.wtricks.com.br/images-theme/logo.png');
     }
-  
+
   .wrap {
     width: 100%;
     height: 100vh;
@@ -1444,7 +1461,7 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     -ms-flex-align: center;
     align-items: center;
   }
-  
+
     .page-header, .page-footer {
       width: 100%;
       margin: 20px;
@@ -1454,7 +1471,7 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     }
         @media (min-width: 800px) {
           .page-header, .page-footer {
-            
+
             padding: 0;
           }
         }
@@ -1469,10 +1486,10 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     color: #000;
     text-decoration: none;
   }
-  
+
   /* Final page style
      !!Below this line, Gallery's code starts!!*/
-  
+
   /* Slideshow container */
   .gallery-container {
     width: 90%;
@@ -1486,12 +1503,12 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
           margin: auto;
         }
     }
-  
+
   /* Hide the images by default */
   .mySlides {
     display: none;
   }
-  
+
   /* Next & previous buttons */
   .prev, .next {
     cursor: pointer;
@@ -1507,18 +1524,18 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     border-radius: 0 3px 3px 0;
     background-color: rgba(0,0,0,0.1);
   }
-  
+
   /* Position the "next button" to the right */
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
-  
+
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
-  
+
   /* Caption text */
   .text {
     color: #f2f2f2;
@@ -1527,11 +1544,11 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     width: 100%;
     text-align: center;
   }
-  
+
   .imgslide {
     width: 100%;
   }
-  
+
   /* Number text (1/3 etc) */
   .numbertext {
     color: #f2f2f2;
@@ -1546,7 +1563,7 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     }
 
   }
-  
+
   /* Fading animation */
   .fade {
     -webkit-animation-name: fade;
@@ -1554,12 +1571,12 @@ input, input[type=text], input[type=password], input[type=email], input[type=num
     animation-name: fade;
     animation-duration: 1.5s;
   }
-  
+
   @-webkit-keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
   }
-  
+
   @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
